--- a/src/main/resources/templates/html/index.html
+++ b/src/main/resources/templates/html/index.html
@@ -13,25 +13,31 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>数据汇总</title>
 </head>
 <body>
-<table>
-    <tr>
-        <td>id<input id="id"/></td>
-        <td>contractCode<input id="contractCode"/></td>
-        <td>createTime<input id="createTime"/></td>
-    </tr>
-    <tr>
-        <td th:colspan="3"><button id="cc">筛选</button></td>
-    </tr>
-</table>
-<div>
+<div style="height: 49%;">
+    <table>
+        <tr>
+            <td>税号<input id="taxno"/></td>
+            <td>起始时间<input id="startDate"/></td>
+            <td>终止时间<input id="endDate"/></td>
+        </tr>
+        <tr>
+            <td th:colspan="3">
+                <button id="cc">筛选</button>
+            </td>
+        </tr>
+    </table>
     <table class="table">
         <thead>
-        <th>承运商名称</th>
-        <th>承运商编号</th>
-        <th>状态时间</th>
+        <th>税号</th>
+        <th>盘号</th>
+        <th>税盘数据量</th>
+        <th>中间件数据量</th>
+        <th>大数据数据量</th>
+        <th>起始时间</th>
+        <th>终止时间</th>
         </thead>
         <tbody id="contentHTML">
 
@@ -41,5 +47,8 @@
         <div class="tcdPageCode" id="pager"></div>
     </div>
 </div>
+<div id="container1" style="height: 150%;"></div>
+<div id="container2" style="height: 150%;"></div>
+<script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/echarts.min.js"></script>
 </body>
 </html>
